--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.output.ansi.enabled=ALWAYS
 # MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/examenes
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
